🚔 Add security (and config)

--- a/config.sample.json
+++ b/config.sample.json
@@ -2,5 +2,6 @@
     "ip": "ip",
     "port": "80",
     "https": true,
-    "name": "name"
+    "name": "name",
+    "authorization": "authorization"
 }
