--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
     "ip": "45.90.162.185",
     "port": "80",
     "https": true,
-    "name": "rome-dev.fr"
+    "name": "rome-dev.fr",
+    "authorization": "mouchou"
 }
